# ukol2

./: CMakeLists.txt  README.md  main.cpp
Aviation/: CMakeLists.txt
Aviation/include/: airplane.h  airport.h  crew_member.h
Aviation/src/: airplane.cpp  crew_member.cpp
